Add experimental menu features.