@@ -14,6 +14,8 @@ import java.util.Set;
 import opendoja.host.OpenDoJaLaunchArgs;
 
 final class LauncherProcessSupport {
+    private static final String JAVA2D_UI_SCALE_ENABLED = "sun.java2d.uiScale.enabled";
+
     Process startInBackground(GameLaunchSelection selection) throws IOException {
         return startInBackground(selection, null);
     }
@@ -39,7 +41,10 @@ final class LauncherProcessSupport {
     List<String> buildLaunchCommand(GameLaunchSelection selection, LauncherSettings settings) throws IOException {
         List<String> command = new ArrayList<>();
         command.add(Path.of(System.getProperty("java.home"), "bin", "java").toString());
-        Set<String> overriddenProperties = appendForwardedProperties(command, System.getProperties());
+        if (settings != null && settings.disableBytecodeVerification()) {
+            command.add("-Xverify:none");
+        }
+        Set<String> overriddenProperties = appendForwardedProperties(command, System.getProperties(), settings);
         appendLauncherSettings(command, settings, overriddenProperties);
         command.add("-cp");
         command.add(resolveLauncherArtifact() + File.pathSeparator + selection.gameJarPath());
@@ -49,10 +54,18 @@ final class LauncherProcessSupport {
         return command;
     }
 
-    private Set<String> appendForwardedProperties(List<String> command, Properties properties) {
+    private Set<String> appendForwardedProperties(List<String> command, Properties properties, LauncherSettings settings) {
         Set<String> forwarded = new HashSet<>();
+        boolean disableOsDpiScaling = settings != null && settings.disableOsDpiScaling();
         for (String name : properties.stringPropertyNames()) {
-            if (name.startsWith("opendoja.") || name.equals("java.awt.headless") || name.equals("sun.java2d.uiScale")) {
+            if (disableOsDpiScaling
+                    && (name.equals("sun.java2d.uiScale") || name.equals(JAVA2D_UI_SCALE_ENABLED))) {
+                continue;
+            }
+            if (name.startsWith("opendoja.")
+                    || name.equals("java.awt.headless")
+                    || name.equals("sun.java2d.uiScale")
+                    || name.equals(JAVA2D_UI_SCALE_ENABLED)) {
                 command.add("-D" + name + "=" + properties.getProperty(name));
                 forwarded.add(name);
             }
@@ -69,6 +82,11 @@ final class LauncherProcessSupport {
         appendProperty(command, overriddenProperties, OpenDoJaLaunchArgs.TERMINAL_ID, settings.terminalId());
         appendProperty(command, overriddenProperties, OpenDoJaLaunchArgs.USER_ID, settings.userId());
         appendProperty(command, overriddenProperties, OpenDoJaLaunchArgs.FONT_TYPE, settings.fontType());
+        if (settings.disableOsDpiScaling()) {
+            // Oracle's Java 2D troubleshooting docs recommend uiScale.enabled=false to disable
+            // high-DPI scaling, while noting dpiaware=false no longer affects JDK 9+ on Windows.
+            appendProperty(command, overriddenProperties, JAVA2D_UI_SCALE_ENABLED, "false");
+        }
     }
 
     private void appendProperty(List<String> command, Set<String> overriddenProperties, String name, String value) {
